// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Divider Dashed 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <hr
      class="sc-ikJyIC fpaKKe sc-hiCibw fhBOc"
      type="dashed"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <hr
      class="sc-ikJyIC fyVnc sc-hiCibw fhBOc"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Custom Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <hr
      class="sc-ikJyIC kUYIpl sc-hiCibw eBsIAg"
      color="#ccc"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Text Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu frGhDt sc-hGPBjI dGJbEs sc-hiCibw fhBOc"
    >
      <hr
        class="sc-ikJyIC sc-jJoQJp fpaKKe laXgVz"
        type="dashed"
      />
      <span
        class="sc-fKVqWL hOcWtv sc-iwjdpV tynpC"
      >
        some text
      </span>
      <hr
        class="sc-ikJyIC sc-jJoQJp fpaKKe laXgVz"
        type="dashed"
      />
    </div>
  </div>
</div>
`;
